in v0.9.1).


Version 2.0.4 (also included in 1.11.13 when appropriate)
-------------
* Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
  Tiles, Modules and Dies are exposed as Groups for now.
* Ignore NUMA node information from AMD topoext in the x86 backend,
  unless HWLOC_X86_TOPOEXT_NUMANODES=1 is set in the environment.


Version 2.0.3 (also included in 1.11.12 when appropriate)
-------------
* Fix build on Cygwin, thanks to Marco Atzeri for the patches.
* Fix a corner case of hwloc_topology_restrict() where children would
  become out-of-order.
* Fix the return length of export_xmlbuffer() functions to always
  include the ending \0.
* Fix lstopo --children-order argument parsing.


Version 2.0.2 (also included in 1.11.11 when appropriate)
-------------
* Add support for Hygon Dhyana processors in the x86 backend,
  thanks to Pu Wen for the patch.
* Fix symbol renaming to also rename internal components,
  thanks to Evan Ramos for the patch.
* Fix build on HP-UX, thanks to Richard Lloyd for reporting the issues.
* Detect PCI link speed without being root on Linux >= 4.13.
* Add HWLOC_VERSION* macros to the public headers,
  thanks to Gilles Gouaillardet for the suggestion.


Version 2.0.1 (also included in 1.11.10 when relevant)
-------------
* Bump the library soname to 15:0:0 to avoid conflicts with hwloc 1.11.x
  releases. The hwloc 2.0.0 soname was buggy (12:0:0), applications will
  have to be recompiled.
* Serialize pciaccess discovery to fix concurrent topology loads in
  multiple threads.
* Fix hwloc-dump-hwdata to only process SMBIOS information that correspond
  to the KNL and KNM configuration.
* Add a heuristic for guessing KNL/KNM memory and cluster modes when
  hwloc-dump-hwdata could not run as root earlier.
* Add --no-text lstopo option to remove text from some boxes in the
  graphical output. Mostly useful for removing Group labels.
* Some minor fixes to memory binding.


Version 2.0.0
-------------